Avoid instanciating Integer and Long objects